[package]
name = "wgpu_mandelbulb"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17.0"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
ndarray = "0.15.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.17.0", features = [] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]

[env]
WGPU_BACKEND = "webgpu"
